--- a/wp-stack/comandos-wp.css
+++ b/wp-stack/comandos-wp.css
@@ -1328,13 +1328,21 @@ figcaption,
     line-height: 1.6;
 }
 
+@font-face {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-display: optional;
+    src: url('/wp-content/themes/autopipe-blog/assets/fonts/inter-400-subset.woff2') format('woff2');
+}
+
 /* ASYNC FONTS LOADER (v103.0) */
 @font-face {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
     font-display: optional;
-    src: url('/wp-content/themes/comandos-blog/assets/fonts/inter-700-subset.woff2') format('woff2');
+    src: url('/wp-content/themes/autopipe-blog/assets/fonts/inter-700-subset.woff2') format('woff2');
 }
 
 @font-face {
@@ -1342,7 +1350,7 @@ figcaption,
     font-style: normal;
     font-weight: 800;
     font-display: optional;
-    src: url('/wp-content/themes/comandos-blog/assets/fonts/inter-800-subset.woff2') format('woff2');
+    src: url('/wp-content/themes/autopipe-blog/assets/fonts/inter-800-subset.woff2') format('woff2');
 }
 
 @font-face {
@@ -1350,7 +1358,7 @@ figcaption,
     font-style: normal;
     font-weight: 900;
     font-display: optional;
-    src: url('/wp-content/themes/comandos-blog/assets/fonts/inter-900-subset.woff2') format('woff2');
+    src: url('/wp-content/themes/autopipe-blog/assets/fonts/inter-900-subset.woff2') format('woff2');
 }
 
 @font-face {
@@ -1358,5 +1366,14 @@ figcaption,
     font-style: normal;
     font-weight: 900;
     font-display: optional;
-    src: url('/wp-content/themes/comandos-blog/assets/fonts/Unbounded%5Bwght%5D.ttf') format('truetype');
+    src: url('/wp-content/themes/autopipe-blog/assets/fonts/unbounded-wght.ttf') format('truetype');
+}
+
+/* HIDE SEARCH ON MOBILE FOR ARTICLES (v135.0) */
+@media (max-width: 767px) {
+
+    .single .header-search-wrapper,
+    .page .header-search-wrapper {
+        display: none !important;
+    }
 }
